# Moonbeam-MIDI-distillation

./: .gitignore  LICENSE  Moonbeam_distillation(1).ipynb  README.md  data_preprocess.py  data_preprocess_conditioned.py  export_folder_structure.py  folder_structure.txt  pyproject.toml  requirements.txt
generation/: example_chat_completion.py  example_text_completion.py
generation/llama/: generation.py  model.py  test_rotary_embedding.py
recipes/distillation/: distillation.py  distillation_conditioned.py  distillation_uncon_lahk.py
recipes/finetuning/: overfitting_test.py  real_finetuning_con_gen.py
recipes/inference/: local_gui_app.py
recipes/inference/custom_music_generation/: __init__.py  conditional_music_generation.py  conditional_music_generation_batch.py  continue_unconditioned.py  example_music_completion.py  example_music_completion_overfit.py  generate_single_midi.py  generation.py  generation_conditioned.py  merge_peft_model.py  unconditional_music_generation.py
src/llama_recipes/: finetuning.py  overfitting_test.py  real_finetuning_con_gen.py  real_finetuning_uncon_gen.py
src/llama_recipes/configs/: __init__.py  datasets.py  ddp.py  model_config.json  model_config_commu_con_gen.json  model_config_emotion_con_gen.json  model_config_small.json  model_config_tiny.json  peft.py  student_100M_con.json  training.py  wandb.py
src/llama_recipes/data/: concatenator.py
src/llama_recipes/datasets/: __init__.py  commu_con_gen_dataset.py  emophia_con_gen_dataset.py  lakh_dataset.py  merge_dataset.py  music_tokenizer.py
(+17 files in other folders)
